rnsc/test_data/integration/error/parser/outside_class_directive/dot_eof.rns
.
.class MyClass
.super java/lang/Object
